--- a/Task-01_landingPage/src/index.css
+++ b/Task-01_landingPage/src/index.css
@@ -1,5 +1,13 @@
+/*Google fonts*/
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body{
+  font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: black;
+  color: #b7b7b7;
 }
