--- a/Task-01_landingPage/src/components/Home.css
+++ b/Task-01_landingPage/src/components/Home.css
@@ -214,8 +214,11 @@
 }
 
 .main_card_image img{
-  max-width: 650px;
-  max-height: 260px;
+    margin: auto;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
 }
 
 .main_card_image_data {
@@ -441,7 +444,7 @@
   }
   
   .main_blog_heading{
-    padding-left: 5%;
+    padding-left: 1%;
     margin-top: 50px;
     margin-bottom: 4rem;
   }
@@ -467,16 +470,19 @@
   }
   
   .main_card_image{
-    margin: 0 0 0 5%;
+    margin: 1%;
   }
   
   .main_card_image img{
-    max-width: 650px;
-    max-height: 260px;
+    margin: auto;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
   }
   
   .main_card_image_data {
-    margin-left: 5%;
+    margin-left: 1%;
   }
   
   .main_card_image_data p{
@@ -654,5 +660,103 @@
 
   .sub_box-description{
     font-size: 2vmax;
+  }
+
+  .main_blog_heading{
+    padding: 1%;
+    margin-top: 50px;
+    margin-bottom: 4rem;
+  }
+  
+  .main_blog_heading p{
+    color: rgb(103, 103, 103);
+    font-size: 3vmax;
+  }
+  
+  .main_blog_heading h1{
+    font-size: 6.5vmax;
+    margin: 0%;
+  }
+  
+  .main_blog_heading h4{
+    color: rgb(103, 103, 103);
+  }
+  
+  .main_card{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  
+  .main_card_image{
+    margin: 1%;
+  }
+  
+  .main_card_image img{
+    margin: auto;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+  }
+  
+  .main_card_image_data {
+    margin: 1%;
+  }
+  
+  .main_card_image_data p{
+    margin: 0%;
+    padding: 0%;
+    color: rgb(103, 103, 103);
+  }
+  
+  .main_card_image_data h1{
+    max-width: 600px;
+  }
+  
+  .main_card_image_data button{
+    background-color: transparent;
+    color: white;
+    border: none;
+    margin-top: 30px;
+    padding: 0%;
+  }
+  
+  #main_read-more{
+    margin: 1rem 0 0 0;
+    padding: 1rem 3rem;
+    font-size: larger;
+    border: 1px solid white;
+    cursor: pointer;
+    transition: .3s;
+  }
+  
+  #main_read-more:hover{
+    background-color: aquamarine;
+    color: black;
+    border: 1px solid black;
+    transition: .5s;
+  }
+  
+  .main_button_seeAll{
+    display: flex;
+    justify-content: center;
+    margin-top: 70px;
+    margin-bottom: 100px;
+  }
+  
+  .main_button_seeAll button{
+    font-size: larger;
+    padding: 1rem 4.5rem;
+    border: 1px solid black;
+    transition: .3s;
+    cursor: pointer;
+  }
+  
+  .main_button_seeAll button:hover{
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    transition: .3s;
   }
 }
